// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reset link dialog 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c16 {
  box-sizing: border-box;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c15:focus-visible,
.teleport-button__force-focus-visible .c15 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c15:hover,
.teleport-button__force-hover .c15 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c15:active,
.teleport-button__force-active .c15 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c15:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c17:focus-visible,
.teleport-button__force-focus-visible .c17 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: rgba(255,255,255,0.72);
  border-radius: 4px;
  outline: none;
}

.c17:hover,
.teleport-button__force-hover .c17 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c17:active,
.teleport-button__force-active .c17 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c17:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 24px;
  margin-top: 4px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.main"
        >
          Share Link
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
        >
          User
          <span
            class="c10"
          >
             Lester 
          </span>
          has been reset. Share this URL with the user to set up a new password, link is valid for 
          30 minutes
          .
        </div>
        <div
          class="c11 c12"
          color="light"
        >
          <div
            class="c13 c14"
            style="word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
          >
            <div>
              http://localhost/web/reset/0c536179038b386728dfee6602ca297f
            </div>
          </div>
          <button
            class="c15"
            fill="filled"
            style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
          >
            Copy
          </button>
        </div>
      </div>
      <div
        class="c16"
      >
        <button
          class="c17"
          fill="filled"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`reset link dialog as invite 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  padding: 8px;
  color: #FFFFFF;
  background-color: #010B1C;
  border-radius: 4px;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c16 {
  box-sizing: border-box;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c15:focus-visible,
.teleport-button__force-focus-visible .c15 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c15:hover,
.teleport-button__force-hover .c15 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c15:active,
.teleport-button__force-active .c15 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c15:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c17:focus-visible,
.teleport-button__force-focus-visible .c17 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.72);
  border-color: rgba(255,255,255,0.72);
  border-radius: 4px;
  outline: none;
}

.c17:hover,
.teleport-button__force-hover .c17 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c17:active,
.teleport-button__force-active .c17 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c17:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 24px;
  margin-top: 4px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.main"
        >
          Share Link
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
        >
          User
          <span
            class="c10"
          >
             Lester 
          </span>
          has been created but requires a password. Share this URL with the user to set up a password, link is valid for 
          30 minutes
          .
        </div>
        <div
          class="c11 c12"
          color="light"
        >
          <div
            class="c13 c14"
            style="word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
          >
            <div>
              http://localhost/web/invite/0c536179038b386728dfee6602ca297f
            </div>
          </div>
          <button
            class="c15"
            fill="filled"
            style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
          >
            Copy
          </button>
        </div>
      </div>
      <div
        class="c16"
      >
        <button
          class="c17"
          fill="filled"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
